# Fontscape

./: README.md  README_CN.md  claude.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/font/: check.rs  mod.rs  models.rs  scanner.rs  state.rs
src-tauri/tests/: font_scanner_tests.rs
src/components/font/: FontCard.tsx  FontGrid.tsx  FontInfoModal.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
src/components/ui/: ContextMenu.tsx
src/hooks/: useFonts.ts
src/lib/: font.ts  tauri-api.ts  utils.ts
src/store/: fontStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: font.ts
